[package]
name = "html2pdf"
version = "0.6.0"
edition = "2018"
authors = ["Igor Laborie <igor@monkeypatch.io>"]
description = "Convert HTML to PDF using a Headless Chrome browser"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ilaborie/html2pdf"
documentation = "https://docs.rs/html2pdf"
keywords = ["cli", "pdf"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
headless_chrome = "1.0"

clap = { version = "4.1", features = ["derive"] }

humantime = "2.1"

anyhow = "1.0"
thiserror = "1.0"

log = "0.4"
pretty_env_logger = "0.4"
dunce = "1.0"

[dev-dependencies]
rstest = "0.16"
assert2 = "0.3"
