[package]
name = "html2pdf"
version = "0.6.1"
edition = "2021"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
description = "Convert HTML to PDF using a Headless Chrome browser"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ilaborie/html2pdf"
documentation = "https://docs.rs/html2pdf"
keywords = ["cli", "pdf"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
headless_chrome = "1.0"

clap = { version = "4.4", features = ["derive"] }

humantime = "2.1"

anyhow = "1.0"
thiserror = "1.0"

log = "0.4"
pretty_env_logger = "0.5"
dunce = "1.0"

[dev-dependencies]
rstest = "0.18"
assert2 = "0.3"
