[package]
name = "html2pdf"
version = "0.8.2"
edition = "2021"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
description = "Convert HTML to PDF using a Headless Chrome browser"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ilaborie/html2pdf"
documentation = "https://docs.rs/html2pdf"
homepage = "https://github.com/ilaborie/html2pdf"
keywords = ["cli", "pdf"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["from", "error", "display"] }
dunce = "1.0.5"
headless_chrome = "1.0.16"
humantime = "2.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert2 = "0.3.15"
rstest = "0.24.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
